force-app/main/default/objects/Store_Planogram__c/Store_Planogram__c.object-meta.xml
<CustomObject>
    <label>Store Planogram</label>
    <nameField>
        <label>Store Planogram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Planograms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>