force-app/main/default/objects/Store_Planogram__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Store_Planograms</relationshipName>
    <type>Lookup</type>
</CustomField>