force-app/main/default/objects/Store_Planogram__c/fields/Compliant__c.field-meta.xml
<CustomField>
    <fullName>Compliant__c</fullName>
    <label>Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>