force-app/main/default/objects/Store_Planogram__c/fields/Expectation__c.field-meta.xml
<CustomField>
    <fullName>Expectation__c</fullName>
    <label>Expectation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>