force-app/main/default/objects/Store_Planogram__c/fields/Recorded_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Recorded_DateTime__c</fullName>
    <label>Recorded DateTime</label>
    <type>DateTime</type>
</CustomField>