force-app/main/default/objects/Store_Planogram__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Store Planograms</relationshipLabel>
    <relationshipName>Store_Planograms</relationshipName>
    <type>Lookup</type>
</CustomField>